fix(Layout): add missing border class to AppsDropdownImage

--- a/packages/orion/src/Layout/layout.css
+++ b/packages/orion/src/Layout/layout.css
@@ -107,7 +107,7 @@
  * Apps Dropdown Image
  */
 .orion.layout .layout-apps-dropdown-image {
-  @apply flex justify-center items-center bg-white overflow-hidden mr-8 w-32 h-32 rounded-full border-gray-400;
+  @apply flex justify-center items-center bg-white overflow-hidden mr-8 w-32 h-32 rounded-full border border-gray-400;
 }
 
 .orion.layout .layout-apps-dropdown-image > .orion.image {
